UtahLiveDataTest/src/objects/TermConditionSchedule__c.object
<CustomObject>
    <description>[Business] Schedule for the Terms and Conditions</description>
    <fields>
        <fullName>AssignedTo__c</fullName>
        <formula>TermAndCondition__r.Award__r.CreatedBy.FirstName &amp; &quot; &quot; &amp;  TermAndCondition__r.Award__r.CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Date_Passed__c</fullName>
        <formula>EndDate__c &lt; TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Date Passed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DateDifference__c</fullName>
        <formula>DATEVALUE(Now())-DueDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DateDifference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DueDate__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HideEditBtn__c</fullName>
        <formula>EndDate__c &lt; TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Edit Btn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PaymentRequestId__c</fullName>
        <label>Payment Request Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentRequestReportStatusLink__c</fullName>
        <formula>IF(ReportStatus__c == &apos;N/A&apos;,&apos;N/A&apos;,HYPERLINK(&quot;/&quot;+PaymentRequestId__c, ReportStatus__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Report Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgressReportId__c</fullName>
        <label>Progress Report Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgressReportStatusLink__c</fullName>
        <formula>IF(ReportStatus__c == &apos;N/A&apos;,&apos;N/A&apos;,HYPERLINK(&quot;/&quot;+ProgressReportId__c, ReportStatus__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Report Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReportStatus__c</fullName>
        <label>Report Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReportSubmitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Report Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReportingTaskCreationDate__c</fullName>
        <formula>EndDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reporting Task Creation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SiteVisitId__c</fullName>
        <label>Site Visit Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SiteVisitReportStatusLink__c</fullName>
        <formula>IF(ReportStatus__c == &apos;N/A&apos;,&apos;N/A&apos;,HYPERLINK(&quot;/&quot;+SiteVisitId__c, ReportStatus__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Report Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SiteVisit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site Visit</label>
        <referenceTo>SiteVisit__c</referenceTo>
        <relationshipLabel>Term Condition Schedules</relationshipLabel>
        <relationshipName>Term_Condition_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>The field to hold the status of particular schedule. If the batch job has not picked on the schedule, it is in not started state, if a report is already created, it is in completed state</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TaskCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Task Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TaskCreationDate__c</fullName>
        <label>Task Creation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TermAndCondition__c</fullName>
        <label>Term and Condition</label>
        <referenceTo>TermCondition__c</referenceTo>
        <relationshipLabel>Term Condition Schedules</relationshipLabel>
        <relationshipName>Term_Condition_Schedules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Term Condition Schedule</label>
    <nameField>
        <displayFormat>SC-{00000}</displayFormat>
        <label>Term Condition Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Term Condition Schedules</pluralLabel>
    <recordTypes>
        <fullName>PaymentRequest</fullName>
        <active>true</active>
        <label>Payment Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>ProgressReport</fullName>
        <active>true</active>
        <label>Progress Report</label>
    </recordTypes>
    <recordTypes>
        <fullName>SiteVisit</fullName>
        <active>true</active>
        <label>Site Visit</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>StartEndDateValidation</fullName>
        <active>true</active>
        <errorConditionFormula>StartDate__c &gt;  EndDate__c</errorConditionFormula>
        <errorDisplayField>StartDate__c</errorDisplayField>
        <errorMessage>Start Date cannot be after the End date</errorMessage>
    </validationRules>
</CustomObject>